--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div><img src="looogo.png" alt=""></div>
         <div class="tabs">
           <ul>
-            <li> <a href="#home"> Home </a>  </li>
-            <li><a href= "#menu">   Menu </a></li>
-            <li> <a href="#contact" >Contact Us </a> </li>
+            <li> <a href="#home" target="_self"> Home </a>  </li>
+            <li><a href= "#menu" target="_self">   Menu </a></li>
+            <li> <a href="#contact" target="_self" >Contact Us </a> </li>
           </ul>
         </div>
         <div>
@@ -179,14 +179,6 @@
 
         </div>
       </div>
-      <div class="documentation">
-        <h2>How to know the current branch and create a new branch if it does not exist</h2>
-        <p>To know the current branch in Git, use the following command:</p>
-        <pre><code>git branch</code></pre>
-        <p>The current branch will be highlighted with an asterisk (*).</p>
-        <p>If the <code>main</code> branch does not exist, you can create it using the following command:</p>
-        <pre><code>git checkout -b main</code></pre>
-        <p>This command will create a new branch named <code>main</code> and switch to it.</p>
-      </div>
+     
   </body>
 </html>
